k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: shortly
spec:
  selector:
    app: shortly
  ports:
  - name: http-ws
    port: 80
    targetPort: 8080
    protocol: TCP
  type: ClusterIP
